Disabling margins options.
BUG=101739
TEST=Open print preview, there should be no margins options.
Review URL: http://codereview.chromium.org/8341041

git-svn-id: svn://svn.chromium.org/chrome/branches/912/src@107355 0039d316-1c4b-4281-b951-d872f2087c98

--- a/chrome/browser/resources/print_preview/margin_settings.html
+++ b/chrome/browser/resources/print_preview/margin_settings.html
@@ -1,4 +1,4 @@
-<div id="margins-option" class="two-column option visible">
+<div id="margins-option" class="two-column option">
   <h1 i18n-content="marginsLabel"></h1>
   <select id="margin-list">
     <option i18n-content="defaultMargins" value="0" selected></option>
